feat: upgrade to VS 2022 and CMake 3.12

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,37 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.12)
+
+# Enable Hot Reload for MSVC compilers if supported.
+if (POLICY CMP0141)
+    cmake_policy (SET CMP0141 NEW)
+    set (CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+endif()
 
 project ("DataViewExample")
 
-set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-message(STATUS "CMAKE_MODULE_PATH:${CMAKE_MODULE_PATH}")
+find_package(wxWidgets CONFIG REQUIRED)
 
-# Include sub-projects.
-add_subdirectory ("src")
+# Add source to this project's executable.
+add_executable (${PROJECT_NAME} WIN32 "main.cpp")
+
+if (CMAKE_VERSION VERSION_GREATER 3.12)
+    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
+endif()
+
+target_compile_definitions (
+    ${PROJECT_NAME}
+    PUBLIC
+    _CRT_SECURE_NO_WARNINGS
+    _UNICODE
+    UNICODE
+    WXUSINGDLL
+    wxUSE_GUI=1
+    wxUSE_DATEPICKCTRL=1
+    wxNO_UNSAFE_WXSTRING_CONV=1
+    __WXMSW__
+    $<$<CONFIG:Debug>:WXDEBUG>
+)
+
+target_link_libraries (${PROJECT_NAME} PRIVATE
+    wx::core
+    wx::base
+)
