--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,8 +1,9 @@
 ﻿{
   "configurations": [
     {
-      "name": "x86-Debug",
-      "generator": "Visual Studio 16 2019",
+      "name": "x64-Debug",
+      "description": "64 bit Visual Studio debug build",
+      "generator": "Visual Studio 17 2022 Win64",
       "configurationType": "Debug",
       "buildRoot": "${projectDir}\\build\\${name}",
       "cmakeCommandArgs": "",
@@ -13,30 +14,7 @@
           "value": "C:\\Microsoft\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake",
           "type": "STRING"
         }
-      ],
-      "inheritEnvironments": [ "msvc_x86" ],
-      "clangTidyChecks": "-*,cppcoreguidelines-*",
-      "enableMicrosoftCodeAnalysis": true,
-      "intelliSenseMode": "windows-msvc-x86"
-    },
-    {
-      "name": "x86-Release",
-      "generator": "Visual Studio 16 2019",
-      "configurationType": "Release",
-      "buildRoot": "${projectDir}\\build\\${name}",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "-m -v:minimal",
-      "variables": [
-        {
-          "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "C:\\Microsoft\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake",
-          "type": "STRING"
-        }
-      ],
-      "inheritEnvironments": [ "msvc_x86" ],
-      "clangTidyChecks": "-*,cppcoreguidelines-*",
-      "enableMicrosoftCodeAnalysis": true,
-      "intelliSenseMode": "windows-msvc-x86"
+      ]
     }
   ]
 }
